; ModuleID = '/home/carl/AnghaBench/tmux/extr_utf8.c_utf8_stravis.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_utf8.c_utf8_stravis.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @utf8_stravis(i8** %0, i8* %1, i32 %2) #0 {
  %4 = alloca i8**, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  store i8** %0, i8*** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load i8*, i8** %5, align 8
  %10 = call i64 @strlen(i8* %9)
  %11 = add nsw i64 %10, 1
  %12 = call i8* @xreallocarray(i32* null, i32 4, i64 %11)
  store i8* %12, i8** %7, align 8
  %13 = load i8*, i8** %7, align 8
  %14 = load i8*, i8** %5, align 8
  %15 = load i8*, i8** %5, align 8
  %16 = call i64 @strlen(i8* %15)
  %17 = load i32, i32* %6, align 4
  %18 = call i32 @utf8_strvis(i8* %13, i8* %14, i64 %16, i32 %17)
  store i32 %18, i32* %8, align 4
  %19 = load i8*, i8** %7, align 8
  %20 = load i32, i32* %8, align 4
  %21 = add nsw i32 %20, 1
  %22 = call i8* @xrealloc(i8* %19, i32 %21)
  %23 = load i8**, i8*** %4, align 8
  store i8* %22, i8** %23, align 8
  %24 = load i32, i32* %8, align 4
  ret i32 %24
}

declare dso_local i8* @xreallocarray(i32*, i32, i64) #1

declare dso_local i64 @strlen(i8*) #1

declare dso_local i32 @utf8_strvis(i8*, i8*, i64, i32) #1

declare dso_local i8* @xrealloc(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
